kubertenes/artwork.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artwork-deployment
  namespace: 0aps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artwork
  template:
    metadata:
      labels:
        app: artwork
    spec:
      containers:
        - name: artwork
          image: ghcr.io/0aps/artwork
---
apiVersion: v1
kind: Service
metadata:
  name: artwork-service
  namespace: 0aps
spec:
  selector:
    app: artwork
  ports:
    - name: artwork
      protocol: TCP
      port: 3000
      targetPort: 3000
