kubertenes/identity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: 0aps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: ghcr.io/0aps/identity
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: 0aps
spec:
  selector:
    app: identity
  ports:
    - name: identity
      protocol: TCP
      port: 3000
      targetPort: 3000
