kubertenes/order.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: 0aps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: ghcr.io/0aps/order
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: 0aps
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 3000
      targetPort: 3000
