kubertenes/payment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-db-deployment
  namespace: 0aps
spec:
  selector:
    matchLabels:
      app: payment-db
  template:
    metadata:
      labels:
        app: payment-db
    spec:
      containers:
        - name: payment-db
          image: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: payment-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: payment-db-service
  namespace: 0aps
spec:
  selector:
    app: payment-db
  ports:
    - port: 27017
      targetPort: 27017
