kubertenes/payment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: 0aps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: ghcr.io/0aps/payment
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: 0aps
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 3000
      targetPort: 3000
