kubertenes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: 0aps
spec:
  rules:
    - host: artwork.0aps.fl.neosllc.org
      http:
        paths:
          - path: /api/v1/artworks
            pathType: ImplementationSpecific
            backend:
              service:
                name: artwork-service
                port:
                  number: 3000
          - path: /api/v1/certificates
            pathType: ImplementationSpecific
            backend:
              service:
                name: certificate-service
                port:
                  number: 3000
          - path: /api/v1/users
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-service
                port:
                  number: 3000
          - path: /api/v1/orders
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 3000
          - path: /api/v1/payments
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 3000
